fixed pass reset form border layout issue (bug 712968)

--- a/media/css/impala/forms.less
+++ b/media/css/impala/forms.less
@@ -337,9 +337,6 @@ textarea {
             margin-left: 1em;
         }
     }
-    fieldset + .footer-submit {
-        margin-top: -1em;
-    }
     a.delete {
         color: @error-red;
     }
